--- a/index.html
+++ b/index.html
@@ -585,10 +585,20 @@
             box-shadow: 0 14px 26px rgba(255, 126, 95, 0.3);
         }
 
+        .live-chat-message.autopilot .message-bubble {
+            background: linear-gradient(135deg, rgba(48, 195, 166, 0.18), rgba(29, 164, 136, 0.32));
+            border-color: rgba(48, 195, 166, 0.35);
+            box-shadow: 0 12px 26px rgba(48, 195, 166, 0.22);
+        }
+
         .live-chat-message .message-meta {
             font-size: 0.75rem;
             color: var(--text-light);
             opacity: 0.9;
+        }
+
+        .live-chat-message.autopilot .message-meta {
+            color: var(--primary);
         }
 
         .live-chat-form {
@@ -3722,8 +3732,15 @@
                     liveChatEmptyState.classList.add('hidden');
                 }
 
+                const sender = typeof message.sender === 'string' ? message.sender : 'visitor';
+                const isAutopilot = sender === 'autopilot';
+                const isAdminMessage = sender === 'admin' || isAutopilot;
+
                 const wrapper = document.createElement('div');
-                wrapper.className = `live-chat-message ${message.sender === 'admin' ? 'from-admin' : 'from-visitor'}`;
+                wrapper.className = `live-chat-message ${isAdminMessage ? 'from-admin' : 'from-visitor'}`;
+                if (isAutopilot) {
+                    wrapper.classList.add('autopilot');
+                }
 
                 const bubble = document.createElement('div');
                 bubble.className = 'message-bubble';
@@ -3732,7 +3749,9 @@
 
                 const meta = document.createElement('span');
                 meta.className = 'message-meta';
-                meta.textContent = formatLiveChatTime(message.timestamp);
+                const senderLabel = isAutopilot ? 'Autopilot' : isAdminMessage ? 'Team' : 'You';
+                const timeLabel = formatLiveChatTime(message.timestamp);
+                meta.textContent = timeLabel ? `${senderLabel} • ${timeLabel}` : senderLabel;
                 wrapper.appendChild(meta);
 
                 liveChatMessages.appendChild(wrapper);
@@ -3805,7 +3824,8 @@
                         let hasAdminMessage = false;
                         data.messages.forEach((entry) => {
                             const entryType = entry && typeof entry.type === 'string' ? entry.type : 'message';
-                            if (entry && entry.sender === 'admin' && entryType !== 'invite') {
+                            const sender = entry && typeof entry.sender === 'string' ? entry.sender : '';
+                            if (entry && entryType !== 'invite' && (sender === 'admin' || sender === 'autopilot')) {
                                 hasAdminMessage = true;
                             }
                             renderLiveChatMessage(entry);
@@ -3884,6 +3904,12 @@
                     }
                     if (data.entry) {
                         renderLiveChatMessage(data.entry);
+                    }
+                    if (data.autopilot_entry) {
+                        renderLiveChatMessage(data.autopilot_entry);
+                        if (!liveChatWindowOpen) {
+                            setChatUnreadIndicator(true);
+                        }
                     }
                     liveChatInput.value = '';
                     clearChatBanner();
